--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -264,7 +264,7 @@
    ],
    "source": [
     "\n",
-    "df = pd.read_csv(\"train.csv\")\n",
+    "df = pd.read_csv(\"/Users/saureeshpamidipati/Documents/Acads/SEM - 3/STA - 5703/Project 1/train.csv\")\n",
     "print(\"Shape of dataset:\", df.shape)\n",
     "\n",
     "df.head()\n"
