--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -16,7 +16,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "\n",
-    "from sklearn.linear_model import LinearRegression, Ridge, Lasso, ElasticNet\n",
+    "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
     "from sklearn.neighbors import KNeighborsRegressor\n"
    ]
   },
